Fix scrollbar color schemes

--- a/src/app.css
+++ b/src/app.css
@@ -52,6 +52,7 @@
 		--border-radius: 1em;
 		--button-border-radius: 1em;
 		--input-border-radius: 1em;
+		color-scheme: dark;
 	}
 
 	.docs-heading {
